# slack-broadcaster

./: .gitignore  index.html  install.sh  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: MessageForm.tsx  SendResult.tsx  TemplateSelector.tsx  WorkspaceList.tsx  WorkspaceSettings.tsx
src/hooks/: useTemplates.ts  useWorkspaces.ts
src/lib/: slack.ts  storage.ts
src/types/: index.ts
